<resources>
    <string name="app_name">SchoolInfo</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_entry_form">Entry Form</string>
    <string name="title_Description">Description</string>
    <string name="school_name">School Name*</string>
    <string name="address">Address*</string>
    <string name="city">City*</string>
    <string name="zipcode">Zipcode*</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="boys_num">Number of Boys</string>
    <string name="girls_num">Number of Girls</string>
    <string name="male_teachers_num">Number Of Male teacher</string>
    <string name="female_teachers_num">Number Of Female teacher</string>
    <string name="levels_taught">Levels Taught</string>
    <string name="daycare">Daycare</string>
    <string name="kg">KG</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="higher">Higher</string>
    <string name="website">Website</string>
    <string name="school_start_time">School Start time</string>
    <string name="school_end_time">School End time</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone number</string>


    <string name="error_timeout">We’re sorry, there seems to be a connection error. Please contact jugalptl207@gmail.com if this problem continues.</string>
    <string name="auth_fail">Incorrect email/password.</string>
    <string name="network_error">We’re sorry, there seems to be a network error. Please contact jugalptl207@gmail.com if this problem continues</string>
    <string name="parse_error">We’re sorry, there seems to be a parse error. Please contact jugalptl207@gmail.com if this problem continues</string>
    <string name="error_404">We’re sorry, there seems to be a network error. Please contact jugalptl207@gmail.com if this problem continues</string>
    <string name="error_universal">Something went wrong.</string>
    <string name="connection_error">Internet connection unavailable. Please check your connections.</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_sign_in">SIGN IN</string>
    <string name="title_search">search</string>


    <string-array name="school_type">
        <item name="type">School Type</item>
        <item name="Public">Public</item>
        <item name="Private">Private</item>
        <item name="International">International</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
